Roll back to --cluster submission

--- a/wa_profiles/wa-rhino/config.yaml
+++ b/wa_profiles/wa-rhino/config.yaml
@@ -48,7 +48,7 @@ cluster-config: wa_profiles/wa-rhino/cluster.json
 # Submit jobs to the cluster with SLURM's DRMAA bindings. The string associated
 # with this key tells SLURM how to map cluster resources with those defined in
 # the cluster config above.
-drmaa: " {cluster.partition} --nodes=1 --ntasks=1 --mem={cluster.memory} --cpus-per-task={cluster.cores} --tmp={cluster.disk} --time={cluster.time}"
+cluster: "sbatch {cluster.partition} --nodes=1 --ntasks=1 --mem={cluster.memory} --cpus-per-task={cluster.cores} --tmp={cluster.disk} --time={cluster.time}"
 
 # NOTE: Use the settings from the next block if DRMAA is not an option.
 # Use a custom script to evaluate the status of jobs on the cluster. This
